<resources>
    <string name="app_name">Калькулятор ОСАГО Repo3</string>
    <string name="toolbar_main">Калькулятор ОСАГО</string>
    <string name="calculate_insurance">Рассчитать ОСАГО</string>
    <string name="calculate_payment">Расчёт цены полиса</string>
    <string name="factor_title">БТ</string>
    <string name="factor_name">(базоый тариф)</string>
    <string name="factor_detail_text">Устанавливает страховая компания</string>
    <string name="factor_value">2 754 – 4 432 ₽</string>
    <string name="factors_header">Ваши коэффициенты</string>
    <string name="form_hint">Город регистрации собственника</string>
    <string name="next">Далее</string>
    <string name="confirm">Подтвердить</string>
    <string name="insurance_name">Согласие</string>
    <string name="insurance_price">10 575 ₽</string>
    <string name="insurance_rating">4.0</string>
    <string name="insurance_icon_title">C</string>
    <string name="buy_insurance">Рассчитать точную цену и купить</string>
    <string name="ruble_sign">%1$s ₽</string>
    <string name="insurance_confirm">Ваш полис успешно оформлен</string>
    <string name="ready">Готово</string>
</resources>
