<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:id="@+id/linear_layout_factor_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/text_factor_value"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/text_factor_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/factor_title"
                android:textAppearance="@style/TextFactor" />

            <TextView
                android:id="@+id/text_factor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/factor_name"
                android:textAppearance="@style/TextSecondary" />

        </LinearLayout>

        <TextView
            android:id="@+id/text_factor_detail_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/factor_detail_text"
            android:textAppearance="@style/TextSecondary"
            android:textColor="@color/main_60" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_factor_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/factor_value"
        android:textAppearance="@style/TextFactor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
