<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="16dp"
    android:layout_marginTop="16dp"
    android:layout_marginRight="16dp"
    app:cardBackgroundColor="@color/light_100"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <FrameLayout
            android:id="@+id/frame_layout_image_insurance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image_insurance"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@mipmap/ic_launcher_round"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.RoundCorners" />

            <TextView
                android:id="@+id/text_insurance_icon_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/insurance_icon_title"
                android:textAppearance="@style/TextInsurance" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/frame_layout_image_insurance"
            app:layout_constraintRight_toLeftOf="@+id/text_insurance_price"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_insurance_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insurance_name"
                android:textAppearance="@style/TextFactor"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/image_star"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_star" />

                <TextView
                    android:id="@+id/text_insurance_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:text="@string/insurance_rating"
                    android:textAppearance="@style/TextSecondary"
                    android:textColor="@color/main_100" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/text_insurance_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/insurance_price"
            android:textAppearance="@style/TextInsurance"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
